<?xml version="1.0"?>
<package format="2">
  <name>example_ros_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fabio.ruetz@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>python3-pandas</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>


</package>
